1.2.1
- Add preview export
- Knock TFC back down to 3.2.5, no reason to require a higher version